c_prototypes.h

void koota_sum_integer2(void * invec, void * inoutvec, size_t len);
void koota_prod_integer2(void * invec, void * inoutvec, size_t len);
void koota_band_integer2(void * invec, void * inoutvec, size_t len);
void koota_bor_integer2(void * invec, void * inoutvec, size_t len);
void koota_bxor_integer2(void * invec, void * inoutvec, size_t len);
void koota_land_integer2(void * invec, void * inoutvec, size_t len);
void koota_lor_integer2(void * invec, void * inoutvec, size_t len);
void koota_lxor_integer2(void * invec, void * inoutvec, size_t len);
void koota_min_integer4(void * invec, void * inoutvec, size_t len);
void koota_max_integer4(void * invec, void * inoutvec, size_t len);
void koota_sum_integer4(void * invec, void * inoutvec, size_t len);
void koota_prod_integer4(void * invec, void * inoutvec, size_t len);
void koota_band_integer4(void * invec, void * inoutvec, size_t len);
void koota_bor_integer4(void * invec, void * inoutvec, size_t len);
void koota_bxor_integer4(void * invec, void * inoutvec, size_t len);
void koota_land_integer4(void * invec, void * inoutvec, size_t len);
void koota_lor_integer4(void * invec, void * inoutvec, size_t len);
void koota_lxor_integer4(void * invec, void * inoutvec, size_t len);